<resources>
    <string name="app_name">Barter</string>
    <string name="email">email</string>
    <string name="firstPassword">password</string>
    <string name="confirmPassword">confirm password</string>
    <string name="registraButton">register</string>
    <string name="error"></string>
    <string name="firstName">first name</string>
    <string name="lastName">last name</string>

    <string-array name="categories">
        <item>Art</item>
        <item>Baby Items</item>
        <item>Bikes</item>
        <item>Books</item>
        <item>Electronics</item>
        <item>Exercise Equipment</item>
        <item>Furniture</item>
        <item>Hobbies and Crafts</item>
        <item>Home Appliances</item>
        <item>Jewellery and Watches</item>
        <item>Musical Instruments</item>
        <item>Phones</item>
        <item>Tickets</item>
        <item>Toys</item>
        <item>Video Games and Consoles</item>
    </string-array>

    <string-array name="locations">
        <item>Halifax</item>
        <item>Toronto</item>
    </string-array>
</resources>
